fix: html2canvas shifted down bug

--- a/app/globals.css
+++ b/app/globals.css
@@ -100,6 +100,9 @@ body {
   body {
     @apply bg-background text-foreground;
   }
+  img {
+    @apply inline-block;
+  }
 }
 
 @layer components {
